--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 EXPO_TUNNEL_SUBDOMAIN=maya-learn
 EXPO_PACKAGER_HOSTNAME=https://maya-learn.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=https://maya-learn.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=http://localhost:8001
 EXPO_USE_FAST_RESOLVER="1"
 METRO_CACHE_ROOT=/app/frontend/.metro-cache
