--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "axios": "^1.13.2",
+    "axios": "0.27.2",
     "expo": "^54.0.25",
     "expo-av": "^16.0.7",
     "expo-blur": "~14.1.5",
@@ -27,7 +27,7 @@
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
+    "expo-router": "~6.0.15",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
