feat: Actualizar URL del backend a la de Azure

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
-EXPO_TUNNEL_SUBDOMAIN=maya-learn
-EXPO_PACKAGER_HOSTNAME=https://maya-learn.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=http://127.0.0.1:8001
+EXPO_TUNNEL_SUBDOMAIN=maya-learn2
+EXPO_PACKAGER_HOSTNAME=https://maya-learn2.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://mi-backend-rodolfo-ahdjefg3d7a6dae6.centralus-01.azurewebsites.net
 EXPO_USE_FAST_RESOLVER="1"
 METRO_CACHE_ROOT=/app/frontend/.metro-cache
